--- a/build.gradle
+++ b/build.gradle
@@ -25,14 +25,34 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.testng:testng:7.7.0'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     implementation 'com.mysql:mysql-connector-j:8.2.0'
+    implementation 'com.h2database:h2:2.2.222'
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude module: 'junit'
+        exclude module: 'junit-vintage-engine'
+        exclude module: 'junit-jupiter-engine'
+        exclude module: 'junit-jupiter-params'
+        exclude module: 'junit-jupiter'
+        exclude module: 'junit-jupiter-api'
+        exclude module: 'mockito-core'
+        exclude module: 'mockito-all'
+    }
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.assertj:assertj-core:3.19.0'
-    testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
+    testImplementation 'org.junit.platform:junit-platform-commons:1.10.1'
+    testImplementation 'org.junit.platform:junit-platform-engine:1.10.1'
+    // JUnit 5 (Jupiter)
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
+    // Mockito
+    testImplementation 'org.mockito:mockito-inline:4.3.0'
+    testImplementation 'org.mockito:mockito-core:3.7.7'
 }
 
 jacoco {
@@ -60,6 +80,10 @@ jacocoTestCoverageVerification {
 }
 
 test {
+    // Enable JUnit 5
+    useJUnitPlatform {
+        includeEngines 'junit-jupiter'
+    }
     // Always run tests, even when nothing changed.
     dependsOn 'cleanTest'
 
