--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.meghana.store'
-version = '0.0.1'
+version = '0.0.2'
 
 java {
     sourceCompatibility = '17'
@@ -30,6 +30,8 @@ dependencies {
 
     implementation 'com.mysql:mysql-connector-j:8.2.0'
     implementation 'com.h2database:h2:2.2.222'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude module: 'junit'
