--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: MeghanaStore
   datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:50098}/${DB_NAME:store}
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:db}
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: ${DB_USER:root}
-    password: ${DB_PASSWORD:TjKpD7iI6Y}
+    username: ${DB_USER:user}
+    password: ${DB_PASSWORD:password}
   jpa:
     open-in-view: false
     hibernate:
